--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "test": "test"
   },
   "dependencies": {
+    "alexa-sdk": "^1.0.9",
     "aws-sdk": "^2.7.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "del": "^2.2.2",
+    "eslint": "^3.18.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-html-reporter": "^0.5.2",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-tap": "^0.1.3",
+    "gulp-zip": "^4.0.0"
+  },
   "scripts": {
     "test": "test\\app.js"
   },
