--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "prefer-arrow-callback": "error",
     "camelcase": "warn",
     "new-cap": "warn",
+    "no-invalid-this": "warn",
     "no-var": "error"
   }
 }
