--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "alexa-sdk": "^1.0.9",
+    "alexa-speech-utils": "^0.1.0",
     "aws-sdk": "^2.7.10"
   },
   "devDependencies": {
